--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>新生社團推薦問卷</title>
+  <title>新生社團推薦問卷（含屬性篩選）</title>
   <style>
     body {
       font-family: "Segoe UI", sans-serif;
@@ -19,40 +19,31 @@
       border-radius: 16px;
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
     }
-    h1 {
+    h1, h2 {
       text-align: center;
-      margin-bottom: 2rem;
     }
     .question {
       margin-bottom: 1.8rem;
     }
-    .options {
+    .options, .checkbox-group {
       display: flex;
       justify-content: space-between;
       flex-wrap: wrap;
       margin-top: 0.5rem;
     }
-    .options label {
-      flex: 1 1 18%;
-      text-align: center;
+    .options label, .checkbox-group label {
+      flex: 1 1 30%;
+      text-align: left;
       position: relative;
       margin-bottom: 0.3rem;
-      min-width: 60px;
-    }
-    .options input[type="radio"] {
-      appearance: none;
-      width: 28px;
-      height: 28px;
-      border-radius: 50%;
-      background-color: #ddd;
-      transition: transform 0.2s;
-      vertical-align: middle;
+      min-width: 80px;
       cursor: pointer;
-      margin-right: 0.4rem;
     }
-    .options input[type="radio"]:checked {
-      background-color: #4f46e5;
-      transform: scale(1.3);
+    .options input[type="radio"], 
+    .checkbox-group input[type="checkbox"] {
+      margin-right: 0.6rem;
+      cursor: pointer;
+      vertical-align: middle;
     }
     .submit-btn {
       display: block;
@@ -88,9 +79,8 @@
       font-weight: bold;
       color: #4f46e5;
     }
-
     @media (max-width: 480px) {
-      .options label {
+      .options label, .checkbox-group label {
         flex: 1 1 48%;
         min-width: auto;
         margin-bottom: 0.6rem;
@@ -103,7 +93,20 @@
 </head>
 <body>
   <div class="container">
-    <h1>🎯 新生社團推薦問卷</h1>
+    <h1>🎯 社團推薦 </h1>
+
+    <div class="question">
+      <label><strong>請選擇你想參加的社團屬性（可多選）</strong></label>
+      <div class="checkbox-group" id="attributeCheckboxes">
+        <label><input type="checkbox" value="服務"> 服務</label>
+        <label><input type="checkbox" value="學術"> 學術</label>
+        <label><input type="checkbox" value="藝術"> 藝術</label>
+        <label><input type="checkbox" value="音樂"> 音樂</label>
+        <label><input type="checkbox" value="體能"> 體能</label>
+        <label><input type="checkbox" value="休聯"> 休閒聯誼</label>
+      </div>
+    </div>
+
     <form id="form">
       <div class="question">
         <label>我喜歡與人互動，個性外向</label>
@@ -201,19 +204,35 @@
   </div>
 
 <script>
+  // 社團資料：traits 陣列為題目分數對應 (q1,q2,q3a,q3b,q3c,q3d,q4,q5)
+  // 屬性 (多屬性以逗號隔開)
   const clubs = [
-    // traits 順序: q1, q2, q3a, q3b, q3c, q3d, q4, q5
-    { name: "管樂社", traits: [5,5,1,1,3,4,4,5], tags: ["#外向", "#合作", "#藝術氣息"], desc: "我們是熱愛吹奏與合奏的大家庭！" },
-    { name: "羽球社", traits: [4,4,1,1,1,1,1,2], tags: ["#活力", "#競賽", "#健康"], desc: "每週都有練習與友誼賽，歡迎來試打！" },
-    { name: "演辯社", traits: [3,3,1,1,1,1,2,5], tags: ["#邏輯", "#口語表達", "#挑戰"], desc: "享受思辨、突破自我，一起訓練腦力與口才！" },
-    { name: "動漫社", traits: [2,2,4,1,5,1,4,1], tags: ["#創作", "#動漫", "#社交輕鬆"], desc: "歡迎宅宅與畫畫高手們加入我們的動漫世界！" },
-    { name: "資訊研習社", traits: [2,3,1,5,1,1,1,1], tags: ["#技術流", "#自學", "#電腦"], desc: "我們寫程式、玩硬體、做APP，給你技術滿滿的成就感！" },
-    { name: "吉他社", traits: [3,3,1,1,3,5,4,4], tags: ["#音樂", "#表演", "#溫柔系"], desc: "喜歡彈唱與療癒的旋律，歡迎加入吉他社！" },
-    { name: "攝影社", traits: [2,2,5,1,4,1,4,2], tags: ["#攝影眼", "#美感", "#作品分享"], desc: "一起用鏡頭記錄世界，歡迎任何程度的新手老手！" }
+    { name: "管樂社", traits: [5,5,1,1,3,4,4,5], tags: ["外向","合作","藝術"], desc: "我們是熱愛吹奏與合奏的大家庭！", attributes: ["音樂","藝術"] },
+    { name: "羽球社", traits: [4,4,1,1,1,1,1,2], tags: ["活力","競賽","健康"], desc: "每週都有練習與友誼賽，歡迎來試打！", attributes: ["體能"] },
+    { name: "演辯社", traits: [3,3,1,1,1,1,2,5], tags: ["邏輯","口語表達","挑戰"], desc: "享受思辨、突破自我，一起訓練腦力與口才！", attributes: ["學術"] },
+    { name: "動漫社", traits: [2,2,4,1,5,1,4,1], tags: ["創作","動漫","社交輕鬆"], desc: "歡迎宅宅與畫畫高手們加入我們的動漫世界！", attributes: ["藝術","休聯"] },
+    { name: "資訊研習社", traits: [2,3,1,5,1,1,1,1], tags: ["技術流","自學","電腦"], desc: "我們寫程式、玩硬體、做APP，給你技術滿滿的成就感！", attributes: ["學術"] },
+    { name: "吉他社", traits: [3,3,1,1,3,5,4,4], tags: ["音樂","表演","溫柔系"], desc: "喜歡彈唱與療癒的旋律，歡迎加入吉他社！", attributes: ["音樂","藝術"] },
+    { name: "攝影社", traits: [2,2,5,1,4,1,4,2], tags: ["攝影眼","美感","作品分享"], desc: "一起用鏡頭記錄世界，歡迎任何程度的新手老手！", attributes: ["藝術","休聯"] },
+    { name: "同舟共濟服務社", traits: [4,5,1,1,1,1,2,2], tags: ["關懷","服務","團結"], desc: "用行動關懷社會，歡迎有愛心的你！", attributes: ["服務"] },
   ];
 
   function calculateRecommendation() {
-    // 預設沒有選擇就設為3（中立）
+    // 先取得使用者選的屬性 (checkbox)
+    const checkedBoxes = [...document.querySelectorAll('#attributeCheckboxes input[type=checkbox]:checked')];
+    const selectedAttrs = checkedBoxes.map(cb => cb.value);
+
+    // 沒選就全部社團都考慮
+    let filteredClubs = clubs;
+    if(selectedAttrs.length > 0) {
+      filteredClubs = clubs.filter(club => club.attributes.some(attr => selectedAttrs.includes(attr)));
+      if(filteredClubs.length === 0) {
+        alert("你選擇的屬性沒有符合的社團，請改選或不選屬性！");
+        return;
+      }
+    }
+
+    // 取題目答案，沒選擇預設3
     const answers = [
       "q1","q2","q3a","q3b","q3c","q3d","q4","q5"
     ].map(name => {
@@ -221,22 +240,22 @@
       return selected ? parseInt(selected.value) : 3;
     });
 
-    // 計算每個社團分數
-    clubs.forEach(club => {
+    // 計算分數
+    filteredClubs.forEach(club => {
       club.score = club.traits.reduce((sum, traitVal, i) => sum + traitVal * answers[i], 0);
     });
 
-    // 分數排序
-    clubs.sort((a,b) => b.score - a.score);
+    // 排序
+    filteredClubs.sort((a,b) => b.score - a.score);
 
-    // 顯示前三名
+    // 顯示前三
     const resultDiv = document.getElementById("clubResults");
     resultDiv.innerHTML = "";
-    clubs.slice(0,3).forEach((club, idx) => {
+    filteredClubs.slice(0,3).forEach((club, idx) => {
       resultDiv.innerHTML += `
         <div class="club-card">
           <h3>${["🥇","🥈","🥉"][idx]} ${club.name}</h3>
-          <div class="tags">${club.tags.join(" ")}</div>
+          <div class="tags">${club.tags.map(t=>"#"+t).join(" ")}</div>
           <p>${club.desc}</p>
           <p class="score">推薦分數：${club.score}</p>
         </div>
