--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>🎯 社團推薦 </h1>
+    <h1>🎯 新生社團推薦問卷（含屬性篩選）</h1>
 
     <div class="question">
       <label><strong>請選擇你想參加的社團屬性（可多選）</strong></label>
