--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>新生社團推薦問卷（含屬性篩選）</title>
+  <title>社團推薦問卷</title>
   <style>
     body {
       font-family: "Segoe UI", sans-serif;
@@ -162,7 +162,7 @@
         </div>
       </div>
       <div class="question">
-        <label>我喜歡用電腦軟體創作音樂或混音</label>
+        <label>我喜歡用電腦軟體創作音樂</label>
         <div class="options">
           <label><input type="radio" name="q3d" value="1">非常不同意</label>
           <label><input type="radio" name="q3d" value="2">不同意</label>
