--- a/index.html
+++ b/index.html
@@ -2,66 +2,107 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>社團推薦問卷</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>新生社團推薦問卷</title>
   <style>
     body {
       font-family: "Segoe UI", sans-serif;
       background: #f6f9fc;
-      padding: 1rem;
+      padding: 2rem;
       color: #333;
     }
+
     .container {
-      max-width: 700px;
+      max-width: 900px;
       margin: auto;
       background: #fff;
       padding: 2rem;
       border-radius: 16px;
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
     }
-    h1, h2 {
+
+    h1 {
       text-align: center;
+      margin-bottom: 2rem;
+      font-size: 2rem;
     }
+
     .question {
-      margin-bottom: 1.8rem;
+      margin-bottom: 2.5rem;
     }
-    .options, .checkbox-group {
+
+    label.question-label {
+      font-weight: 600;
+      display: block;
+      margin-bottom: 0.5rem;
+    }
+
+    .options {
       display: flex;
-      justify-content: space-between;
       flex-wrap: wrap;
+      gap: 0.75rem;
       margin-top: 0.5rem;
+      justify-content: space-between;
     }
-    .options label, .checkbox-group label {
-      flex: 1 1 30%;
-      text-align: left;
+
+    .options label {
+      flex: 1 1 100px;
+      text-align: center;
       position: relative;
-      margin-bottom: 0.3rem;
-      min-width: 80px;
       cursor: pointer;
+      user-select: none;
     }
-    .options input[type="radio"], 
-    .checkbox-group input[type="checkbox"] {
-      margin-right: 0.6rem;
-      cursor: pointer;
+
+    .options input[type="radio"],
+    .options input[type="checkbox"] {
+      appearance: none;
+      width: 28px;
+      height: 28px;
+      border-radius: 50%;
+      background-color: #ddd;
+      transition: transform 0.2s, background-color 0.2s;
       vertical-align: middle;
+      margin-right: 0.5rem;
+      cursor: pointer;
     }
+
+    /* checkbox 複選圓形改方形 */
+    .options input[type="checkbox"] {
+      border-radius: 6px;
+    }
+
+    .options input[type="radio"]:checked {
+      background-color: #4f46e5;
+      transform: scale(1.3);
+    }
+
+    .options input[type="checkbox"]:checked {
+      background-color: #4f46e5;
+      transform: scale(1.3);
+    }
+
     .submit-btn {
       display: block;
       margin: 2rem auto 0;
       padding: 0.75rem 1.5rem;
-      font-size: 1rem;
+      font-size: 1.1rem;
       background-color: #4f46e5;
       color: #fff;
       border: none;
       border-radius: 8px;
       cursor: pointer;
-      max-width: 250px;
-      width: 100%;
+      transition: background-color 0.3s;
     }
+
+    .submit-btn:hover {
+      background-color: #3b37c2;
+    }
+
     .result {
       display: none;
       margin-top: 2rem;
     }
+
     .club-card {
       border: 1px solid #ddd;
       border-left: 6px solid #4f46e5;
@@ -70,131 +111,117 @@
       margin-bottom: 1rem;
       background: #fafafa;
     }
+
     .tags {
       margin: 0.5rem 0;
       font-size: 0.9rem;
       color: #666;
     }
+
     .score {
       font-weight: bold;
       color: #4f46e5;
     }
-    @media (max-width: 480px) {
-      .options label, .checkbox-group label {
-        flex: 1 1 48%;
-        min-width: auto;
-        margin-bottom: 0.6rem;
-      }
-      .submit-btn {
+
+    /* 手機小螢幕調整 */
+    @media (max-width: 600px) {
+      .container {
+        padding: 1rem;
         max-width: 100%;
+      }
+      .options {
+        flex-direction: column;
+        gap: 0.5rem;
+      }
+      .options label {
+        flex: none;
+        text-align: left;
+      }
+      .options input[type="radio"],
+      .options input[type="checkbox"] {
+        margin-right: 1rem;
       }
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>🎯 社團推薦問卷 </h1>
-
-    <div class="question">
-      <label><strong>請選擇你想參加的社團屬性（可多選）</strong></label>
-      <div class="checkbox-group" id="attributeCheckboxes">
-        <label><input type="checkbox" value="服務"> 服務</label>
-        <label><input type="checkbox" value="學術"> 學術</label>
-        <label><input type="checkbox" value="藝術"> 藝術</label>
-        <label><input type="checkbox" value="音樂"> 音樂</label>
-        <label><input type="checkbox" value="體能"> 體能</label>
-        <label><input type="checkbox" value="休聯"> 休閒聯誼</label>
-      </div>
-    </div>
-
+    <h1>🎯 社團推薦問卷</h1>
     <form id="form">
+      <!-- 外向度 -->
       <div class="question">
-        <label>我喜歡與人互動，個性外向</label>
+        <label class="question-label">我喜歡與人互動，個性外向（必填）</label>
         <div class="options">
-          <label><input type="radio" name="q1" value="1">非常不同意</label>
-          <label><input type="radio" name="q1" value="2">不同意</label>
-          <label><input type="radio" name="q1" value="3">普通</label>
-          <label><input type="radio" name="q1" value="4">同意</label>
-          <label><input type="radio" name="q1" value="5">非常同意</label>
+          <label><input type="radio" name="q1" value="1" required> 非常不同意</label>
+          <label><input type="radio" name="q1" value="2"> 不同意</label>
+          <label><input type="radio" name="q1" value="3"> 普通</label>
+          <label><input type="radio" name="q1" value="4"> 同意</label>
+          <label><input type="radio" name="q1" value="5"> 非常同意</label>
         </div>
       </div>
 
+      <!-- 團隊合作 -->
       <div class="question">
-        <label>我喜歡團隊合作完成一件事</label>
+        <label class="question-label">我喜歡團隊合作完成一件事（必填）</label>
         <div class="options">
-          <label><input type="radio" name="q2" value="1">非常不同意</label>
-          <label><input type="radio" name="q2" value="2">不同意</label>
-          <label><input type="radio" name="q2" value="3">普通</label>
-          <label><input type="radio" name="q2" value="4">同意</label>
-          <label><input type="radio" name="q2" value="5">非常同意</label>
+          <label><input type="radio" name="q2" value="1" required> 非常不同意</label>
+          <label><input type="radio" name="q2" value="2"> 不同意</label>
+          <label><input type="radio" name="q2" value="3"> 普通</label>
+          <label><input type="radio" name="q2" value="4"> 同意</label>
+          <label><input type="radio" name="q2" value="5"> 非常同意</label>
         </div>
       </div>
 
-      <!-- 技術類細分 -->
+      <!-- 技術細項 -->
       <div class="question">
-        <label>我喜歡拍攝和剪輯影片，做影像後製</label>
+        <label class="question-label">我喜歡技術類活動（請多選，必填至少一項）</label>
         <div class="options">
-          <label><input type="radio" name="q3a" value="1">非常不同意</label>
-          <label><input type="radio" name="q3a" value="2">不同意</label>
-          <label><input type="radio" name="q3a" value="3">普通</label>
-          <label><input type="radio" name="q3a" value="4">同意</label>
-          <label><input type="radio" name="q3a" value="5">非常同意</label>
-        </div>
-      </div>
-      <div class="question">
-        <label>我喜歡寫程式、設計網站或開發應用程式</label>
-        <div class="options">
-          <label><input type="radio" name="q3b" value="1">非常不同意</label>
-          <label><input type="radio" name="q3b" value="2">不同意</label>
-          <label><input type="radio" name="q3b" value="3">普通</label>
-          <label><input type="radio" name="q3b" value="4">同意</label>
-          <label><input type="radio" name="q3b" value="5">非常同意</label>
-        </div>
-      </div>
-      <div class="question">
-        <label>我喜歡平面設計、繪製插畫或海報設計</label>
-        <div class="options">
-          <label><input type="radio" name="q3c" value="1">非常不同意</label>
-          <label><input type="radio" name="q3c" value="2">不同意</label>
-          <label><input type="radio" name="q3c" value="3">普通</label>
-          <label><input type="radio" name="q3c" value="4">同意</label>
-          <label><input type="radio" name="q3c" value="5">非常同意</label>
-        </div>
-      </div>
-      <div class="question">
-        <label>我喜歡用電腦軟體創作音樂</label>
-        <div class="options">
-          <label><input type="radio" name="q3d" value="1">非常不同意</label>
-          <label><input type="radio" name="q3d" value="2">不同意</label>
-          <label><input type="radio" name="q3d" value="3">普通</label>
-          <label><input type="radio" name="q3d" value="4">同意</label>
-          <label><input type="radio" name="q3d" value="5">非常同意</label>
+          <label><input type="checkbox" name="tech" value="剪輯" required> 剪影片</label>
+          <label><input type="checkbox" name="tech" value="設計"> 設計</label>
+          <label><input type="checkbox" name="tech" value="程式"> 寫程式</label>
+          <label><input type="checkbox" name="tech" value="攝影"> 攝影</label>
+          <label><input type="checkbox" name="tech" value="音樂製作"> 音樂製作</label>
         </div>
       </div>
 
+      <!-- 藝術創作 -->
       <div class="question">
-        <label>我喜歡創作或欣賞藝術</label>
+        <label class="question-label">我喜歡創作或欣賞藝術（必填）</label>
         <div class="options">
-          <label><input type="radio" name="q4" value="1">非常不同意</label>
-          <label><input type="radio" name="q4" value="2">不同意</label>
-          <label><input type="radio" name="q4" value="3">普通</label>
-          <label><input type="radio" name="q4" value="4">同意</label>
-          <label><input type="radio" name="q4" value="5">非常同意</label>
+          <label><input type="radio" name="q4" value="1" required> 非常不同意</label>
+          <label><input type="radio" name="q4" value="2"> 不同意</label>
+          <label><input type="radio" name="q4" value="3"> 普通</label>
+          <label><input type="radio" name="q4" value="4"> 同意</label>
+          <label><input type="radio" name="q4" value="5"> 非常同意</label>
         </div>
       </div>
 
+      <!-- 表演 -->
       <div class="question">
-        <label>我喜歡表演或在群體中發光</label>
+        <label class="question-label">我喜歡表演或在群體中發光（必填）</label>
         <div class="options">
-          <label><input type="radio" name="q5" value="1">非常不同意</label>
-          <label><input type="radio" name="q5" value="2">不同意</label>
-          <label><input type="radio" name="q5" value="3">普通</label>
-          <label><input type="radio" name="q5" value="4">同意</label>
-          <label><input type="radio" name="q5" value="5">非常同意</label>
+          <label><input type="radio" name="q5" value="1" required> 非常不同意</label>
+          <label><input type="radio" name="q5" value="2"> 不同意</label>
+          <label><input type="radio" name="q5" value="3"> 普通</label>
+          <label><input type="radio" name="q5" value="4"> 同意</label>
+          <label><input type="radio" name="q5" value="5"> 非常同意</label>
         </div>
       </div>
 
-      <button class="submit-btn" type="button" onclick="calculateRecommendation()">送出問卷並推薦社團</button>
+      <!-- 社團屬性 多選 -->
+      <div class="question">
+        <label class="question-label">你喜歡哪些社團屬性？（多選，必選至少一項）</label>
+        <div class="options">
+          <label><input type="checkbox" name="attributes" value="服務" required> 服務</label>
+          <label><input type="checkbox" name="attributes" value="學術"> 學術</label>
+          <label><input type="checkbox" name="attributes" value="藝術"> 藝術</label>
+          <label><input type="checkbox" name="attributes" value="音樂"> 音樂</label>
+          <label><input type="checkbox" name="attributes" value="體能"> 體能</label>
+          <label><input type="checkbox" name="attributes" value="休聯"> 休聯</label>
+        </div>
+      </div>
+
+      <button class="submit-btn" type="submit">送出問卷並推薦社團</button>
     </form>
 
     <div class="result" id="result">
@@ -203,69 +230,85 @@
     </div>
   </div>
 
-<script>
-  // 社團資料：traits 陣列為題目分數對應 (q1,q2,q3a,q3b,q3c,q3d,q4,q5)
-  // 屬性 (多屬性以逗號隔開)
-  const clubs = [
-    { name: "管樂社", traits: [5,5,1,1,3,4,4,5], tags: ["外向","合作","藝術"], desc: "我們是熱愛吹奏與合奏的大家庭！", attributes: ["音樂","藝術"] },
-    { name: "羽球社", traits: [4,4,1,1,1,1,1,2], tags: ["活力","競賽","健康"], desc: "每週都有練習與友誼賽，歡迎來試打！", attributes: ["體能"] },
-    { name: "演辯社", traits: [3,3,1,1,1,1,2,5], tags: ["邏輯","口語表達","挑戰"], desc: "享受思辨、突破自我，一起訓練腦力與口才！", attributes: ["學術"] },
-    { name: "動漫社", traits: [2,2,4,1,5,1,4,1], tags: ["創作","動漫","社交輕鬆"], desc: "歡迎宅宅與畫畫高手們加入我們的動漫世界！", attributes: ["藝術","休聯"] },
-    { name: "資訊研習社", traits: [2,3,1,5,1,1,1,1], tags: ["技術流","自學","電腦"], desc: "我們寫程式、玩硬體、做APP，給你技術滿滿的成就感！", attributes: ["學術"] },
-    { name: "吉他社", traits: [3,3,1,1,3,5,4,4], tags: ["音樂","表演","溫柔系"], desc: "喜歡彈唱與療癒的旋律，歡迎加入吉他社！", attributes: ["音樂","藝術"] },
-    { name: "攝影社", traits: [2,2,5,1,4,1,4,2], tags: ["攝影眼","美感","作品分享"], desc: "一起用鏡頭記錄世界，歡迎任何程度的新手老手！", attributes: ["藝術","休聯"] },
-    { name: "同舟共濟服務社", traits: [4,5,1,1,1,1,2,2], tags: ["關懷","服務","團結"], desc: "用行動關懷社會，歡迎有愛心的你！", attributes: ["服務"] },
-  ];
+  <script>
+    // 社團資料加上屬性
+    const clubs = [
+      { name: "管樂社", traits: [5,5,2,4,5], attributes: ["音樂", "藝術"], tags: ["#外向", "#合作", "#藝術氣息"], desc: "我們是熱愛吹奏與合奏的大家庭！" },
+      { name: "羽球社", traits: [4,4,2,1,2], attributes: ["體能"], tags: ["#活力", "#競賽", "#健康"], desc: "每週都有練習與友誼賽，歡迎來試打！" },
+      { name: "演辯社", traits: [3,3,3,2,5], attributes: ["學術"], tags: ["#邏輯", "#口語表達", "#挑戰"], desc: "享受思辨、突破自我，一起訓練腦力與口才！" },
+      { name: "動漫社", traits: [2,2,3,5,1], attributes: ["休聯", "藝術"], tags: ["#創作", "#動漫", "#社交輕鬆"], desc: "歡迎宅宅與畫畫高手們加入我們的動漫世界！" },
+      { name: "資訊研習社", traits: [2,3,5,2,1], attributes: ["學術"], tags: ["#技術流", "#自學", "#電腦"], desc: "我們寫程式、玩硬體、做APP，給你技術滿滿的成就感！" },
+      { name: "吉他社", traits: [3,3,2,5,4], attributes: ["音樂", "藝術"], tags: ["#音樂", "#表演", "#溫柔系"], desc: "喜歡彈唱與療癒的旋律，歡迎加入吉他社！" },
+      { name: "攝影社", traits: [2,2,3,4,2], attributes: ["藝術"], tags: ["#攝影眼", "#美感", "#作品分享"], desc: "一起用鏡頭記錄世界，歡迎任何程度的新手老手！" }
+    ];
 
-  function calculateRecommendation() {
-    // 先取得使用者選的屬性 (checkbox)
-    const checkedBoxes = [...document.querySelectorAll('#attributeCheckboxes input[type=checkbox]:checked')];
-    const selectedAttrs = checkedBoxes.map(cb => cb.value);
+    // 表單送出事件
+    document.getElementById("form").addEventListener("submit", function(e){
+      e.preventDefault();
 
-    // 沒選就全部社團都考慮
-    let filteredClubs = clubs;
-    if(selectedAttrs.length > 0) {
-      filteredClubs = clubs.filter(club => club.attributes.some(attr => selectedAttrs.includes(attr)));
-      if(filteredClubs.length === 0) {
-        alert("你選擇的屬性沒有符合的社團，請改選或不選屬性！");
+      // 檢查技術類多選至少一個
+      const techChecked = [...document.querySelectorAll('input[name="tech"]:checked')];
+      if (techChecked.length === 0) {
+        alert("請至少選擇一項技術類活動！");
         return;
       }
-    }
 
-    // 取題目答案，沒選擇預設3
-    const answers = [
-      "q1","q2","q3a","q3b","q3c","q3d","q4","q5"
-    ].map(name => {
-      const selected = document.querySelector(`input[name="${name}"]:checked`);
-      return selected ? parseInt(selected.value) : 3;
+      // 檢查屬性多選至少一個
+      const attrChecked = [...document.querySelectorAll('input[name="attributes"]:checked')];
+      if (attrChecked.length === 0) {
+        alert("請至少選擇一項社團屬性！");
+        return;
+      }
+
+      // 取五題的分數
+      const q = [1,2,4,5].map(i => {
+        const sel = document.querySelector(`input[name="q${i}"]:checked`);
+        return sel ? parseInt(sel.value) : 3;
+      });
+
+      // 技術類多選分數（若有勾則加分2，沒有0）
+      // 這裡假設技術多選有勾就給分2，否則0
+      const techScore = techChecked.length * 2;
+
+      // 根據技術類細項，加分到第五題（表演）上，避免影響其他題
+      q[4 - 1] += techScore; // q5的索引是4 (注意前面q陣列沒包含q3，但我們用索引對應實際題號)
+
+      // 取得用戶選的屬性
+      const userAttributes = attrChecked.map(i => i.value);
+
+      // 計算每個社團分數（traits分數乘問卷分數加權）
+      clubs.forEach(club => {
+        // 屬性相符度（計算用戶選屬性與社團屬性交集數）
+        const attrMatchCount = club.attributes.filter(a => userAttributes.includes(a)).length;
+        // 屬性相符比例
+        const attrRatio = attrMatchCount / userAttributes.length;
+
+        // 計算分數（traits分數加權乘總和）+ 屬性加權 (屬性加權占30%)
+        const traitScore = club.traits.reduce((sum, t, i) => sum + t * (q[i] || 0), 0);
+        club.score = traitScore * 0.7 + attrRatio * 100 * 0.3;
+      });
+
+      // 分數排序
+      clubs.sort((a,b) => b.score - a.score);
+
+      // 顯示前三名推薦
+      const resultDiv = document.getElementById("clubResults");
+      resultDiv.innerHTML = "";
+      clubs.slice(0,3).forEach((club, idx) => {
+        resultDiv.innerHTML += `
+          <div class="club-card">
+            <h3>${["🥇","🥈","🥉"][idx]} ${club.name}</h3>
+            <div class="tags">${club.tags.join(" ")}</div>
+            <p>${club.desc}</p>
+            <p class="score">推薦分數：${club.score.toFixed(1)}</p>
+          </div>`;
+      });
+
+      document.getElementById("result").style.display = "block";
+
+      // 滾動到結果
+      document.getElementById("result").scrollIntoView({behavior:"smooth"});
     });
-
-    // 計算分數
-    filteredClubs.forEach(club => {
-      club.score = club.traits.reduce((sum, traitVal, i) => sum + traitVal * answers[i], 0);
-    });
-
-    // 排序
-    filteredClubs.sort((a,b) => b.score - a.score);
-
-    // 顯示前三
-    const resultDiv = document.getElementById("clubResults");
-    resultDiv.innerHTML = "";
-    filteredClubs.slice(0,3).forEach((club, idx) => {
-      resultDiv.innerHTML += `
-        <div class="club-card">
-          <h3>${["🥇","🥈","🥉"][idx]} ${club.name}</h3>
-          <div class="tags">${club.tags.map(t=>"#"+t).join(" ")}</div>
-          <p>${club.desc}</p>
-          <p class="score">推薦分數：${club.score}</p>
-        </div>
-      `;
-    });
-
-    document.getElementById("result").style.display = "block";
-    window.scrollTo({top: document.body.scrollHeight, behavior: 'smooth'});
-  }
-</script>
-
+  </script>
 </body>
 </html>
