--- a/index.html
+++ b/index.html
@@ -2,107 +2,107 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>新生社團推薦問卷</title>
   <style>
     body {
-      font-family: "Segoe UI", sans-serif;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       background: #f6f9fc;
-      padding: 2rem;
+      margin: 0;
+      padding: 2rem 1rem;
       color: #333;
+      box-sizing: border-box;
     }
-
     .container {
-      max-width: 900px;
+      max-width: 700px;
       margin: auto;
       background: #fff;
       padding: 2rem;
       border-radius: 16px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
     }
-
     h1 {
       text-align: center;
       margin-bottom: 2rem;
-      font-size: 2rem;
+      font-weight: 700;
     }
-
     .question {
-      margin-bottom: 2.5rem;
+      margin-bottom: 2rem;
     }
-
-    label.question-label {
-      font-weight: 600;
+    .question label {
       display: block;
+      font-weight: 600;
       margin-bottom: 0.5rem;
     }
-
     .options {
       display: flex;
       flex-wrap: wrap;
-      gap: 0.75rem;
-      margin-top: 0.5rem;
-      justify-content: space-between;
+      gap: 1rem;
     }
-
     .options label {
-      flex: 1 1 100px;
-      text-align: center;
-      position: relative;
+      flex: 1 1 120px;
+      display: flex;
+      align-items: center;
       cursor: pointer;
+      position: relative;
       user-select: none;
     }
-
-    .options input[type="radio"],
-    .options input[type="checkbox"] {
+    .options input[type="radio"] {
       appearance: none;
-      width: 28px;
-      height: 28px;
+      -webkit-appearance: none;
+      width: 30px;
+      height: 30px;
       border-radius: 50%;
       background-color: #ddd;
-      transition: transform 0.2s, background-color 0.2s;
-      vertical-align: middle;
       margin-right: 0.5rem;
-      cursor: pointer;
+      transition: transform 0.2s, background-color 0.3s;
+      border: 2px solid transparent;
     }
-
-    /* checkbox 複選圓形改方形 */
-    .options input[type="checkbox"] {
-      border-radius: 6px;
-    }
-
     .options input[type="radio"]:checked {
       background-color: #4f46e5;
       transform: scale(1.3);
+      border-color: #312e81;
     }
-
-    .options input[type="checkbox"]:checked {
-      background-color: #4f46e5;
-      transform: scale(1.3);
+    /* 多選 checkbox for 社團屬性 */
+    .checkbox-group {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+      margin-top: 0.5rem;
     }
-
+    .checkbox-group label {
+      flex: 1 1 120px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      user-select: none;
+    }
+    .checkbox-group input[type="checkbox"] {
+      width: 20px;
+      height: 20px;
+      margin-right: 0.5rem;
+      cursor: pointer;
+    }
     .submit-btn {
       display: block;
       margin: 2rem auto 0;
-      padding: 0.75rem 1.5rem;
+      padding: 0.75rem 2rem;
       font-size: 1.1rem;
       background-color: #4f46e5;
-      color: #fff;
+      color: white;
       border: none;
       border-radius: 8px;
       cursor: pointer;
+      font-weight: 700;
       transition: background-color 0.3s;
     }
-
     .submit-btn:hover {
-      background-color: #3b37c2;
+      background-color: #312e81;
     }
-
     .result {
       display: none;
       margin-top: 2rem;
     }
-
     .club-card {
       border: 1px solid #ddd;
       border-left: 6px solid #4f46e5;
@@ -111,46 +111,29 @@
       margin-bottom: 1rem;
       background: #fafafa;
     }
-
     .tags {
       margin: 0.5rem 0;
       font-size: 0.9rem;
       color: #666;
     }
-
     .score {
       font-weight: bold;
       color: #4f46e5;
     }
-
-    /* 手機小螢幕調整 */
-    @media (max-width: 600px) {
-      .container {
-        padding: 1rem;
-        max-width: 100%;
-      }
-      .options {
-        flex-direction: column;
-        gap: 0.5rem;
-      }
-      .options label {
-        flex: none;
-        text-align: left;
-      }
-      .options input[type="radio"],
-      .options input[type="checkbox"] {
-        margin-right: 1rem;
+    @media (max-width: 480px) {
+      .options label, .checkbox-group label {
+        flex: 1 1 100%;
       }
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>🎯 社團推薦問卷</h1>
+    <h1>🎯 新生社團推薦問卷</h1>
     <form id="form">
-      <!-- 外向度 -->
+      <!-- 問題 -->
       <div class="question">
-        <label class="question-label">我喜歡與人互動，個性外向（必填）</label>
+        <label>1. 我喜歡與人互動，個性外向 (必選)</label>
         <div class="options">
           <label><input type="radio" name="q1" value="1" required> 非常不同意</label>
           <label><input type="radio" name="q1" value="2"> 不同意</label>
@@ -159,10 +142,8 @@
           <label><input type="radio" name="q1" value="5"> 非常同意</label>
         </div>
       </div>
-
-      <!-- 團隊合作 -->
       <div class="question">
-        <label class="question-label">我喜歡團隊合作完成一件事（必填）</label>
+        <label>2. 我喜歡團隊合作完成一件事 (必選)</label>
         <div class="options">
           <label><input type="radio" name="q2" value="1" required> 非常不同意</label>
           <label><input type="radio" name="q2" value="2"> 不同意</label>
@@ -171,22 +152,18 @@
           <label><input type="radio" name="q2" value="5"> 非常同意</label>
         </div>
       </div>
-
-      <!-- 技術細項 -->
       <div class="question">
-        <label class="question-label">我喜歡技術類活動（請多選，必填至少一項）</label>
+        <label>3. 我喜歡技術相關活動（如剪輯影片、設計、寫程式、網路技術）(必選)</label>
         <div class="options">
-          <label><input type="checkbox" name="tech" value="剪輯" required> 剪影片</label>
-          <label><input type="checkbox" name="tech" value="設計"> 設計</label>
-          <label><input type="checkbox" name="tech" value="程式"> 寫程式</label>
-          <label><input type="checkbox" name="tech" value="攝影"> 攝影</label>
-          <label><input type="checkbox" name="tech" value="音樂製作"> 音樂製作</label>
+          <label><input type="radio" name="q3" value="1" required> 非常不同意</label>
+          <label><input type="radio" name="q3" value="2"> 不同意</label>
+          <label><input type="radio" name="q3" value="3"> 普通</label>
+          <label><input type="radio" name="q3" value="4"> 同意</label>
+          <label><input type="radio" name="q3" value="5"> 非常同意</label>
         </div>
       </div>
-
-      <!-- 藝術創作 -->
       <div class="question">
-        <label class="question-label">我喜歡創作或欣賞藝術（必填）</label>
+        <label>4. 我喜歡藝術創作與欣賞（繪畫、書法、攝影、戲劇等）(必選)</label>
         <div class="options">
           <label><input type="radio" name="q4" value="1" required> 非常不同意</label>
           <label><input type="radio" name="q4" value="2"> 不同意</label>
@@ -195,10 +172,8 @@
           <label><input type="radio" name="q4" value="5"> 非常同意</label>
         </div>
       </div>
-
-      <!-- 表演 -->
       <div class="question">
-        <label class="question-label">我喜歡表演或在群體中發光（必填）</label>
+        <label>5. 我喜歡表演與群體中的展現 (必選)</label>
         <div class="options">
           <label><input type="radio" name="q5" value="1" required> 非常不同意</label>
           <label><input type="radio" name="q5" value="2"> 不同意</label>
@@ -208,20 +183,20 @@
         </div>
       </div>
 
-      <!-- 社團屬性 多選 -->
+      <!-- 屬性多選 -->
       <div class="question">
-        <label class="question-label">你喜歡哪些社團屬性？（多選，必選至少一項）</label>
-        <div class="options">
-          <label><input type="checkbox" name="attributes" value="服務" required> 服務</label>
+        <label>6. 你想參與哪些社團屬性？(可多選，至少選一個)</label>
+        <div class="checkbox-group" id="clubAttributes">
+          <label><input type="checkbox" name="attributes" value="服務"> 服務</label>
           <label><input type="checkbox" name="attributes" value="學術"> 學術</label>
           <label><input type="checkbox" name="attributes" value="藝術"> 藝術</label>
           <label><input type="checkbox" name="attributes" value="音樂"> 音樂</label>
           <label><input type="checkbox" name="attributes" value="體能"> 體能</label>
-          <label><input type="checkbox" name="attributes" value="休聯"> 休聯</label>
+          <label><input type="checkbox" name="attributes" value="休閒聯誼"> 休閒聯誼</label>
         </div>
       </div>
 
-      <button class="submit-btn" type="submit">送出問卷並推薦社團</button>
+      <button class="submit-btn" type="button" onclick="submitForm()">送出問卷並推薦社團</button>
     </form>
 
     <div class="result" id="result">
@@ -231,84 +206,83 @@
   </div>
 
   <script>
-    // 社團資料加上屬性
+    // 社團資料（屬性 + 特質評分）
     const clubs = [
-      { name: "管樂社", traits: [5,5,2,4,5], attributes: ["音樂", "藝術"], tags: ["#外向", "#合作", "#藝術氣息"], desc: "我們是熱愛吹奏與合奏的大家庭！" },
-      { name: "羽球社", traits: [4,4,2,1,2], attributes: ["體能"], tags: ["#活力", "#競賽", "#健康"], desc: "每週都有練習與友誼賽，歡迎來試打！" },
-      { name: "演辯社", traits: [3,3,3,2,5], attributes: ["學術"], tags: ["#邏輯", "#口語表達", "#挑戰"], desc: "享受思辨、突破自我，一起訓練腦力與口才！" },
-      { name: "動漫社", traits: [2,2,3,5,1], attributes: ["休聯", "藝術"], tags: ["#創作", "#動漫", "#社交輕鬆"], desc: "歡迎宅宅與畫畫高手們加入我們的動漫世界！" },
-      { name: "資訊研習社", traits: [2,3,5,2,1], attributes: ["學術"], tags: ["#技術流", "#自學", "#電腦"], desc: "我們寫程式、玩硬體、做APP，給你技術滿滿的成就感！" },
-      { name: "吉他社", traits: [3,3,2,5,4], attributes: ["音樂", "藝術"], tags: ["#音樂", "#表演", "#溫柔系"], desc: "喜歡彈唱與療癒的旋律，歡迎加入吉他社！" },
-      { name: "攝影社", traits: [2,2,3,4,2], attributes: ["藝術"], tags: ["#攝影眼", "#美感", "#作品分享"], desc: "一起用鏡頭記錄世界，歡迎任何程度的新手老手！" }
+      // 服務性社團
+      { name: "同舟共濟服務社", attributes: ["服務"], traits: [3,4,2,3,2], tags: ["#服務", "#關懷"], desc: "致力於校園服務與公益活動" },
+      { name: "醒新愛愛服務社", attributes: ["服務"], traits: [2,3,2,2,3], tags: ["#服務", "#志工"], desc: "參與志願服務，助人為快樂之本" },
+      { name: "急救康輔社", attributes: ["服務"], traits: [1,3,3,1,4], tags: ["#急救", "#健康"], desc: "學習急救知識與健康促進" },
+      // 學術性社團
+      { name: "健言社", attributes: ["學術"], traits: [2,3,4,2,1], tags: ["#學術", "#討論"], desc: "熱愛學術研究與知識分享" },
+      { name: "大千社", attributes: ["學術"], traits: [3,3,3,3,2], tags: ["#學術", "#文化"], desc: "多元學術與文化交流" },
+      { name: "天文社", attributes: ["學術"], traits: [1,2,5,2,2], tags: ["#天文", "#探索"], desc: "探索宇宙的奧秘" },
+      // 藝術性社團
+      { name: "書法社", attributes: ["藝術"], traits: [2,2,3,5,2], tags: ["#藝術", "#書法"], desc: "傳承書法藝術與美感" },
+      { name: "攝影社", attributes: ["藝術"], traits: [2,2,4,5,3], tags: ["#藝術", "#攝影"], desc: "用鏡頭捕捉生活美好瞬間" },
+      { name: "戲劇社", attributes: ["藝術"], traits: [3,3,2,5,5], tags: ["#藝術", "#表演"], desc: "舞台劇與表演藝術" },
+      // 音樂性社團
+      { name: "管弦樂社", attributes: ["音樂"], traits: [5,5,2,4,5], tags: ["#音樂", "#合奏"], desc: "喜愛管弦樂演奏" },
+      { name: "鋼琴社", attributes: ["音樂"], traits: [2,3,2,5,3], tags: ["#音樂", "#鋼琴"], desc: "喜歡鋼琴演奏與學習" },
+      { name: "烏克麗麗社", attributes: ["音樂"], traits: [3,3,2,5,3], tags: ["#音樂", "#烏克麗麗"], desc: "輕鬆彈奏，歡樂共享" },
+      // 體能性社團
+      { name: "羽球社", attributes: ["體能"], traits: [4,4,2,1,2], tags: ["#體能", "#運動"], desc: "熱愛羽球運動，健身兼社交" },
+      { name: "登山社", attributes: ["體能"], traits: [3,4,1,1,2], tags: ["#體能", "#戶外"], desc: "登山健行，挑戰自我" },
+      { name: "跑步社", attributes: ["體能"], traits: [4,4,1,1,1], tags: ["#體能", "#跑步"], desc: "一起奔跑，享受健康生活" },
+      // 休閒聯誼性社團
+      { name: "動漫社", attributes: ["休閒聯誼"], traits: [2,2,3,5,1], tags: ["#休閒", "#動漫"], desc: "分享動漫文化，輕鬆交流" },
+      { name: "桌上遊戲社", attributes: ["休閒聯誼"], traits: [3,3,2,1,3], tags: ["#休閒", "#遊戲"], desc: "桌遊同好，一起玩樂" },
+      { name: "咖啡研究社", attributes: ["休閒聯誼"], traits: [1,1,3,3,1], tags: ["#休閒", "#咖啡"], desc: "研究咖啡文化與品味" }
     ];
 
-    // 表單送出事件
-    document.getElementById("form").addEventListener("submit", function(e){
-      e.preventDefault();
+    function submitForm() {
+      const form = document.getElementById("form");
 
-      // 檢查技術類多選至少一個
-      const techChecked = [...document.querySelectorAll('input[name="tech"]:checked')];
-      if (techChecked.length === 0) {
-        alert("請至少選擇一項技術類活動！");
-        return;
+      // 檢查必填
+      const requiredRadios = ["q1","q2","q3","q4","q5"];
+      for (const q of requiredRadios) {
+        if (!document.querySelector(`input[name="${q}"]:checked`)) {
+          alert("請完成所有選擇題！");
+          return;
+        }
       }
-
       // 檢查屬性多選至少一個
-      const attrChecked = [...document.querySelectorAll('input[name="attributes"]:checked')];
-      if (attrChecked.length === 0) {
-        alert("請至少選擇一項社團屬性！");
+      const checkedAttrs = Array.from(document.querySelectorAll('input[name="attributes"]:checked'));
+      if (checkedAttrs.length === 0) {
+        alert("請至少選擇一個社團屬性！");
         return;
       }
+      const attrs = checkedAttrs.map(c => c.value);
 
-      // 取五題的分數
-      const q = [1,2,4,5].map(i => {
-        const sel = document.querySelector(`input[name="q${i}"]:checked`);
-        return sel ? parseInt(sel.value) : 3;
+      // 取得問卷分數
+      const q = requiredRadios.map(q => parseInt(document.querySelector(`input[name="${q}"]:checked`).value));
+
+      // 計算社團分數，且屬性須符合
+      const filteredClubs = clubs.filter(club => club.attributes.some(a => attrs.includes(a)));
+
+      filteredClubs.forEach(club => {
+        club.score = club.traits.reduce((sum, t, i) => sum + t * q[i], 0);
       });
 
-      // 技術類多選分數（若有勾則加分2，沒有0）
-      // 這裡假設技術多選有勾就給分2，否則0
-      const techScore = techChecked.length * 2;
+      filteredClubs.sort((a,b) => b.score - a.score);
 
-      // 根據技術類細項，加分到第五題（表演）上，避免影響其他題
-      q[4 - 1] += techScore; // q5的索引是4 (注意前面q陣列沒包含q3，但我們用索引對應實際題號)
-
-      // 取得用戶選的屬性
-      const userAttributes = attrChecked.map(i => i.value);
-
-      // 計算每個社團分數（traits分數乘問卷分數加權）
-      clubs.forEach(club => {
-        // 屬性相符度（計算用戶選屬性與社團屬性交集數）
-        const attrMatchCount = club.attributes.filter(a => userAttributes.includes(a)).length;
-        // 屬性相符比例
-        const attrRatio = attrMatchCount / userAttributes.length;
-
-        // 計算分數（traits分數加權乘總和）+ 屬性加權 (屬性加權占30%)
-        const traitScore = club.traits.reduce((sum, t, i) => sum + t * (q[i] || 0), 0);
-        club.score = traitScore * 0.7 + attrRatio * 100 * 0.3;
-      });
-
-      // 分數排序
-      clubs.sort((a,b) => b.score - a.score);
-
-      // 顯示前三名推薦
+      // 顯示前三推薦
       const resultDiv = document.getElementById("clubResults");
       resultDiv.innerHTML = "";
-      clubs.slice(0,3).forEach((club, idx) => {
+      filteredClubs.slice(0,3).forEach((club, i) => {
         resultDiv.innerHTML += `
           <div class="club-card">
-            <h3>${["🥇","🥈","🥉"][idx]} ${club.name}</h3>
+            <h3>${["🥇","🥈","🥉"][i]} ${club.name}</h3>
             <div class="tags">${club.tags.join(" ")}</div>
             <p>${club.desc}</p>
-            <p class="score">推薦分數：${club.score.toFixed(1)}</p>
+            <p class="score">推薦分數：${club.score}</p>
           </div>`;
       });
 
       document.getElementById("result").style.display = "block";
 
-      // 滾動到結果
+      // 滾動到結果區
       document.getElementById("result").scrollIntoView({behavior:"smooth"});
-    });
+    }
   </script>
 </body>
 </html>
