--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>🎯 新生社團推薦問卷</h1>
+    <h1>社團推薦問卷</h1>
     <form id="form">
       <!-- 問題 -->
       <div class="question">
